[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["easy-quest <easy.quest@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^7.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
